examples/tests/valid/expressions_binary_operators.w
let x = 1;
let y = (2) * x;
let z = (x + (y) - 1);
let xyz = ((y * y) / (x * x)) * z;


