examples/tests/invalid/primitives.w
let x = "1,2,3";
let y = x.split(",");
      //^ x is not a class

print(y[0]);
     //^ no array indexing